<resources>
    <string name="app_name">ProductsList</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="price">Price: %d$</string>
    <string name="title">Title: %s</string>
    <string name="description">Description: %s</string>
    <string name="discount_percentage">Discount Percentage: %.0f%%</string>
    <string name="raiting">Raiting: %.2f</string>
    <string name="brand">Brand: %s</string>
    <string name="category">Category: %s</string>
    <string name="products">Products</string>
    <string name="backet">Backet</string>
</resources>